src/test/ui/compile-fail-migration/traits-inductive-overflow-two-traits.stderr
error[E0275]: overflow evaluating the requirement `*mut (): Magic`
  --> $DIR/traits-inductive-overflow-two-traits.rs:29:5
   |
LL |     wizard::<*mut ()>(); //~ ERROR E0275
   |     ^^^^^^^^^^^^^^^^^
   |
note: required by `wizard`
  --> $DIR/traits-inductive-overflow-two-traits.rs:26:1
   |
LL | fn wizard<T: Magic>() { check::<<T as Magic>::X>(); }
   | ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
